<resources>
    <string name="appName" translatable="false">Infomaniak Mail</string>
    <string name="notification_channel_id_draft_service" translatable="false">draft_service_channel_id</string>
    <string name="notification_channel_id_general" translatable="false">general_channel_id</string>
    <string name="notification_channel_id_sync_messages_service" translatable="false">sync_messages_service_channel_id</string>
    <string name="accentColorBlueTitle">Blue</string>
    <string name="accentColorPinkTitle">Pink</string>
    <string name="accentColorSystemTitle">System colour</string>
    <string name="acknowledgementMessage">The sender requested a read receipt.</string>
    <string name="acknowledgementMessageSent">A read receipt has been sent to the sender.</string>
    <string name="actionArchive">Archive</string>
    <string name="actionBlockSender">Block sender</string>
    <string name="actionCallIfNoResponse">Remind me if there is no response after sending</string>
    <string name="actionCancelSnooze">Cancel snooze</string>
    <string name="actionDelete">Delete</string>
    <string name="actionEditMenu">Edit menu</string>
    <string name="actionForward">Forward</string>
    <string name="actionMarkAsRead">Mark as read</string>
    <string name="actionMarkAsUnread">Mark as unread</string>
    <string name="actionModifySnooze">Modify snooze</string>
    <string name="actionMove">Move</string>
    <string name="actionMoveToInbox">Move to inbox</string>
    <string name="actionNonSpam">Report as not spam</string>
    <string name="actionPhishing">Report phishing</string>
    <string name="actionPrint">Print</string>
    <string name="actionReminder">Remind me</string>
    <string name="actionRename">Rename</string>
    <string name="actionReply">Reply</string>
    <string name="actionReplyAll">Reply all</string>
    <string name="actionReportDisplayProblem">Report a display problem</string>
    <string name="actionShortMarkAsRead">Read</string>
    <string name="actionShortMarkAsUnread">Unread</string>
    <string name="actionShortSpam">Spam</string>
    <string name="actionShortStar">Favorites</string>
    <string name="actionSnooze">Snooze</string>
    <string name="actionSpam">Report spam</string>
    <string name="actionStar">Add to favorites</string>
    <string name="actionSummarize">Summarize</string>
    <string name="actionUnstar">Delete from favorites</string>
    <string name="actionViewInDark">View in dark theme</string>
    <string name="actionViewInLight">View in light theme</string>
    <string name="addLinkTextPlaceholder">Text to display</string>
    <plurals name="addMultipleDuplicateEmails">
        <item quantity="one">%d email has already been added</item>
        <item quantity="other">%d emails have already been added</item>
    </plurals>
    <plurals name="addMultipleInvalidEmails">
        <item quantity="one">%d email is invalid</item>
        <item quantity="other">%d emails are invalid</item>
    </plurals>
    <string name="addUnknownRecipientAlreadyUsed">The email is already used</string>
    <string name="addUnknownRecipientInvalidEmail">The email is invalid</string>
    <string name="addUnknownRecipientTitle">Add a recipient</string>
    <string name="addressBookTitle">Address Book: %s</string>
    <string name="aiButtonInsert">Insert</string>
    <string name="aiButtonRefine">Refine</string>
    <string name="aiButtonRetry">Retry</string>
    <string name="aiDiscoveryDescription">Simplify your message writing with Artificial Intelligence.</string>
    <string name="aiDiscoveryTitle">Write your emails using Euria</string>
    <string name="aiErrorContextMaxTokenReached">The email you’re replying to is too long for the AI to generate a response.\n\nSummarize what you want to say to get its help.</string>
    <string name="aiErrorMaxTokenReached">Your request is too long, please shorten it.</string>
    <string name="aiErrorTooManyRequests">Too many requests in a short time. Please wait.</string>
    <string name="aiErrorUnknown">An error has occurred. If this error persists, please contact our helpdesk.\nThank you for your patience.</string>
    <string name="aiMenuEditRequest">Edit my request</string>
    <string name="aiMenuExpand">Expand</string>
    <string name="aiMenuFriendlyWriting">Friendly writing</string>
    <string name="aiMenuRegenerate">Regenerate a response</string>
    <string name="aiMenuSeriousWriting">Serious writing</string>
    <string name="aiMenuShorten">Shorten</string>
    <string name="aiPromptAnswer">Explain to Euria how to get help replying to this email.</string>
    <string name="aiPromptExample1">a thank-you email for a welcome gift</string>
    <string name="aiPromptExample2">an email confirming your hotel reservation</string>
    <string name="aiPromptExample3">a thank-you email for an invitation to an event</string>
    <string name="aiPromptExample4">an invitation to a company event</string>
    <string name="aiPromptExample5">an email requesting an appointment with an important customer</string>
    <string name="aiPromptGenerationLoader">Euria is writing…</string>
    <string name="aiPromptPlaceholder">Tell Euria what you want to write. For example \"%s\".</string>
    <string name="aiPromptTitle">Euria</string>
    <string name="aiPromptValidateButton">Generate</string>
    <string name="aiReplaceSubjectDescription">The subject will become:\n\n%s</string>
    <string name="aiReplaceSubjectTitle">Replace the current subject with Euria’s proposal?</string>
    <string name="aiReplacementDialogDescription">By clicking on \"Replace\", pre-existing content will be lost.</string>
    <string name="aiReplacementDialogPositiveButton">Replace</string>
    <string name="aiReplacementDialogTitle">Replace already existing content?</string>
    <string name="alertBlockedImagesDescription">For your safety certain contents have been blocked from your message.</string>
    <string name="alertBlockedImagesDisplayContent">Display content</string>
    <string name="alertSenderNoReply">Please note: The sender of this email does not appear to want a response.</string>
    <string name="appSecurityDescription">Protect access to your app by enabling your phone lock.</string>
    <string name="archiveFolder">Archived</string>
    <string name="askEuriaTitle">Ask Euria</string>
    <string name="attachMailboxDescription1">If you already have an Infomaniak email address, connect now</string>
    <string name="attachMailboxDescription2">Only Infomaniak email addresses are supported</string>
    <string name="attachMailboxInputHint">Email address</string>
    <string name="attachMailboxPasswordInputHint">Password</string>
    <string name="attachMailboxTitle">Add email address</string>
    <string name="attachmentActionFile">Attach a file</string>
    <string name="attachmentActionPhotoLibrary">Send a photo from the photo library</string>
    <string name="attachmentActionTitle">Add an attachment</string>
    <string name="attachmentFileLimitReached">The files that you are trying to send exceed the 25 MB attachment limit</string>
    <plurals name="attachmentQuantity">
        <item quantity="one">%d attachment</item>
        <item quantity="other">%d attachments</item>
    </plurals>
    <string name="attachmentsReminderDescription">You mentioned an attachment, but no file has been added. Send anyway?</string>
    <string name="attachmentsReminderTitle">Missing attachment</string>
    <string name="attendeesListTitle">List of attendees (%d)</string>
    <string name="bccTitle">Bcc:</string>
    <string name="blockAnExpeditorTitle">Block a sender</string>
    <string name="blockExpeditorTitle">Block %s</string>
    <string name="buttonAccept">Accept</string>
    <string name="buttonAccountDelete">Delete account</string>
    <string name="buttonAccountLogOut">Log out</string>
    <string name="buttonAccountSwitch">Change account</string>
    <string name="buttonAddAccount">Add an account</string>
    <string name="buttonAddEmailAddress">Add an email address</string>
    <string name="buttonAttachMailbox">Add this email address</string>
    <string name="buttonAttachment">Add an attachment</string>
    <string name="buttonAttendees">Attendees</string>
    <string name="buttonBold">Bold</string>
    <string name="buttonCancelReminder">Cancel reminder</string>
    <string name="buttonClose">Close</string>
    <string name="buttonConfirm">Confirm</string>
    <string name="buttonConfirmRestoreEmails">Restore</string>
    <string name="buttonContinue">Continue</string>
    <string name="buttonCopyPassword">Copy password</string>
    <string name="buttonCreate">Create</string>
    <string name="buttonCreateFolder">Add a folder</string>
    <string name="buttonCustomReminder">Custom reminder</string>
    <string name="buttonCustomSchedule">Custom schedule</string>
    <string name="buttonDisable">Disable</string>
    <string name="buttonDownload">Download</string>
    <string name="buttonDownloadAll">Download all</string>
    <string name="buttonFeedback">Feedback</string>
    <string name="buttonFolders">Folders</string>
    <string name="buttonHelp">Help</string>
    <string name="buttonHyperlink">Add a hyperlink</string>
    <string name="buttonImportEmails">Import emails</string>
    <string name="buttonInstall">Install</string>
    <string name="buttonItalic">Italic</string>
    <string name="buttonLoadMore">Load more conversations</string>
    <string name="buttonLogInDifferentAccount">Log in with another account</string>
    <string name="buttonModify">Modify</string>
    <string name="buttonMore">More</string>
    <string name="buttonNewMessage">New message</string>
    <string name="buttonOpenMyCalendar">Open in my calendar</string>
    <string name="buttonRefuse">Refuse</string>
    <string name="buttonReschedule">Reschedule</string>
    <string name="buttonRestoreEmails">Restore emails</string>
    <string name="buttonSee">See</string>
    <string name="buttonSelectAll">All</string>
    <string name="buttonSendWithDifferentAddress">Send with a different address</string>
    <string name="buttonShare">Share</string>
    <string name="buttonShowOriginal">Show original message</string>
    <string name="buttonStart">Start</string>
    <string name="buttonStartSync">Start synchronization</string>
    <string name="buttonStrikeThrough">Strike through</string>
    <string name="buttonTextOptionsClose">Close text formatting</string>
    <string name="buttonTextOptionsOpen">Open text formatting</string>
    <string name="buttonTranslate">Translate</string>
    <string name="buttonTry">Try</string>
    <string name="buttonUnderline">Underline</string>
    <string name="buttonUnorderedList">Unordered list</string>
    <string name="draftFolder">Drafts</string>
    <string name="inboxFolder">Inbox</string>
    <string name="menuDrawerAdvancedActions">Advanced actions</string>
    <string name="saveToDriveItem">Save to kDrive</string>
    <string name="sentFolder">Sent messages</string>
    <string name="settingsAccentColor">Accent colour</string>
    <string name="settingsAppLock">App lock</string>
    <string name="settingsDefault">Default</string>
    <string name="settingsExternalContentTitle">External content</string>
    <string name="settingsOptionAskMe">Ask me</string>
    <string name="settingsOptionSystemTheme">System</string>
    <string name="settingsSectionAppearance">Appearance</string>
    <string name="settingsSectionEmailAddresses">Email addresses</string>
    <string name="settingsSectionGeneral">General</string>
    <string name="settingsSendTitle">Send</string>
    <string name="settingsSwipeActionsTitle">Swipe actions</string>
    <string name="settingsThreadListDensityTitle">Thread list density</string>
    <string name="settingsTitle">Settings</string>
    <string name="shareEmail">Share email</string>
    <string name="spamFolder">Spam</string>
    <string name="trashFolder">Trash</string>
</resources>