<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kMail - Android
  ~ Copyright (C) 2022 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<com.infomaniak.mail.ui.main.menu.SimpleSettingView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:title="@string/settingsTitle"
    tools:context=".ui.main.settings.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/SettingHeader"
                android:text="@string/settingsSectionEmailAddresses" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mailboxesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_settings_mailbox" />

            <com.google.android.material.divider.MaterialDivider style="@style/SettingSeparator" />

            <TextView
                style="@style/SettingHeader"
                android:text="@string/settingsSectionGeneral" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:title="@string/settingsSendTitle" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsAppLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="toggle"
                app:title="@string/settingsAppLock" />

            <com.google.android.material.divider.MaterialDivider style="@style/SettingSeparator" />

            <TextView
                style="@style/SettingHeader"
                android:text="@string/settingsSectionAppearance" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsThreadListDensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:subtitle="@string/settingsDefault"
                app:title="@string/settingsThreadListDensityTitle" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:subtitle="@string/settingsOptionSystemTheme"
                app:title="@string/settingsTheme" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsAccentColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:subtitle="@string/accentColorPinkTitle"
                app:title="@string/settingsAccentColor" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsSwipeActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:title="@string/settingsSwipeActionsTitle" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsMessageDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:subtitle="@string/settingsOptionDiscussions"
                app:title="@string/settingsMessageDisplayTitle" />

            <com.infomaniak.mail.ui.main.settings.ItemSettingView
                android:id="@+id/settingsExternalContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemAction="chevron"
                app:subtitle="@string/settingsOptionAskMe"
                app:title="@string/settingsExternalContentTitle" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</com.infomaniak.mail.ui.main.menu.SimpleSettingView>
