<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak Mail - Android
  ~ Copyright (C) 2022 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/quickActionReply"
        android:icon="@drawable/ic_email_action_reply"
        android:title="@string/actionReply" />
    <item
        android:id="@+id/quickActionForward"
        android:icon="@drawable/ic_email_action_send"
        android:title="@string/actionForward" />
    <item
        android:id="@+id/quickActionArchive"
        android:icon="@drawable/ic_archive_folder"
        android:title="@string/actionArchive" />
    <item
        android:id="@+id/quickActionDelete"
        android:icon="@drawable/ic_bin"
        android:title="@string/actionDelete" />
    <item
        android:id="@+id/quickActionMenu"
        android:icon="@drawable/ic_param_dots"
        android:title="@string/buttonMore" />
</menu>
