<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak Mail - Android
  ~ Copyright (C) 2022-2025 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<com.infomaniak.mail.views.BottomSheetScaffoldingView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.thread.actions.MailActionsBottomSheetDialog">

    <com.infomaniak.mail.ui.main.thread.actions.MainActionsView
        android:id="@+id/mainActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginStandardSmall"
        app:menu="@menu/main_actions_thread_message_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:dividerPadding="@dimen/marginStandardMedium"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/lightTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_view_in_light"
            app:title="@string/actionViewInLight"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/addReaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_face_smile"
            app:title="@string/actionAddReaction"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_alarm_clock"
            app:title="@string/actionSnooze"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/modifySnooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_alarm_clock"
            app:title="@string/actionModifySnooze"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/cancelSnooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_circle_cross"
            app:title="@string/actionCancelSnooze"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_email_action_move"
            app:title="@string/actionMove"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/markAsReadUnread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_envelope"
            app:title="@string/actionMarkAsUnread"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/spam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_spam"
            app:title="@string/actionSpam"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/phishing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_email_action_phishing"
            app:title="@string/actionPhishing"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/blockSender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_email_action_block_user"
            app:title="@string/actionBlockSender"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_email_action_share"
            app:title="@string/shareEmail"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/archive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_archive_folder"
            app:title="@string/actionArchive"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_star"
            app:title="@string/actionStar"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_email_action_print"
            app:title="@string/actionPrint"
            app:visibleDivider="false"
            tools:visibility="visible" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/saveKDrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_kdrive"
            app:keepIconTint="true"
            app:title="@string/saveToDriveItem"
            app:visibleDivider="false" />

        <com.infomaniak.mail.ui.main.thread.actions.ActionItemView
            android:id="@+id/reportDisplayProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_feedbacks"
            app:staffOnly="true"
            app:title="@string/actionReportDisplayProblem"
            app:visibleDivider="false"
            tools:visibility="visible" />

    </LinearLayout>
</com.infomaniak.mail.views.BottomSheetScaffoldingView>
